# declare directories containing used libraries
LINK_DIRECTORIES(${dcmimage_BINARY_DIR} ${ofstd_BINARY_DIR} ${dcmdata_BINARY_DIR} ${dcmimgle_BINARY_DIR})
IF(WITH_ZLIB)
  LINK_DIRECTORIES(${WITH_ZLIBINC}/lib)
ENDIF(WITH_ZLIB)
IF(WITH_LIBTIFF)
  LINK_DIRECTORIES(${WITH_LIBTIFFINC}/lib)
ENDIF(WITH_LIBTIFF)
IF(WITH_LIBPNG)
  LINK_DIRECTORIES(${WITH_LIBPNGINC}/lib)
ENDIF(WITH_LIBPNG)

# declare executables
ADD_EXECUTABLE(dcm2pnm dcm2pnm)
ADD_EXECUTABLE(dcmquant dcmquant)
ADD_EXECUTABLE(dcmscale dcmscale)

# make sure executables are linked to the corresponding libraries
# dcm2pnm
IF(WITH_ZLIB)
  IF(WITH_LIBTIFF)
    IF(WITH_LIBPNG)
      TARGET_LINK_LIBRARIES(dcm2pnm netapi32 wsock32 ofstd dcmdata dcmimage dcmimgle debug zlib_d optimized zlib_o debug libtiff_d optimized libtiff_o debug libpng_d optimized libpng_o)
    ELSE(WITH_LIBPNG)
      TARGET_LINK_LIBRARIES(dcm2pnm netapi32 wsock32 ofstd dcmdata dcmimage dcmimgle debug zlib_d optimized zlib_o debug libtiff_d optimized libtiff_o)
    ENDIF(WITH_LIBPNG)
  ELSE(WITH_LIBTIFF)
    IF(WITH_LIBPNG)
      TARGET_LINK_LIBRARIES(dcm2pnm netapi32 wsock32 ofstd dcmdata dcmimage dcmimgle debug zlib_d optimized zlib_o debug libpng_d optimized libpng_o)
    ELSE(WITH_LIBPNG)
      TARGET_LINK_LIBRARIES(dcm2pnm netapi32 wsock32 ofstd dcmdata dcmimage dcmimgle debug zlib_d optimized zlib_o)
    ENDIF(WITH_LIBPNG)
  ENDIF(WITH_LIBTIFF)
ELSE(WITH_ZLIB)
  IF(WITH_LIBTIFF)
    IF(WITH_LIBPNG)
      TARGET_LINK_LIBRARIES(dcm2pnm netapi32 wsock32 ofstd dcmdata dcmimage dcmimgle debug libtiff_d optimized libtiff_o debug libpng_d optimized libpng_o)
    ELSE(WITH_LIBPNG)
      TARGET_LINK_LIBRARIES(dcm2pnm netapi32 wsock32 ofstd dcmdata dcmimage dcmimgle debug libtiff_d optimized libtiff_o)
    ENDIF(WITH_LIBPNG)
  ELSE(WITH_LIBTIFF)
    IF(WITH_LIBPNG)
      TARGET_LINK_LIBRARIES(dcm2pnm netapi32 wsock32 ofstd dcmdata dcmimage dcmimgle debug libpng_d optimized libpng_o)
    ELSE(WITH_LIBPNG)
      TARGET_LINK_LIBRARIES(dcm2pnm netapi32 wsock32 ofstd dcmdata dcmimage dcmimgle)
    ENDIF(WITH_LIBPNG)
  ENDIF(WITH_LIBTIFF)
ENDIF(WITH_ZLIB)
# dcmquant
IF(WITH_ZLIB)
  TARGET_LINK_LIBRARIES(dcmquant netapi32 wsock32 ofstd dcmdata dcmimage dcmimgle debug zlib_d optimized zlib_o)
ELSE(WITH_ZLIB)
  TARGET_LINK_LIBRARIES(dcmquant netapi32 wsock32 ofstd dcmdata dcmimage dcmimgle)
ENDIF(WITH_ZLIB)
# dcmscale
IF(WITH_ZLIB)
  TARGET_LINK_LIBRARIES(dcmscale netapi32 wsock32 ofstd dcmdata dcmimage dcmimgle debug zlib_d optimized zlib_o)
ELSE(WITH_ZLIB)
  TARGET_LINK_LIBRARIES(dcmscale netapi32 wsock32 ofstd dcmdata dcmimage dcmimgle)
ENDIF(WITH_ZLIB)
